@startuml

title __PATCH's Class Diagram__\n

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.patch {
        class Neighbour {
            + Neighbour()
            + getParent()
            + toString()
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.patch {
        class Offspring {
            - origin : String
            - edits : List<Edit>
            + Offspring()
            + setOrigin()
            + toString()
            + getPatch()
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.patch {
        class Patch {
            - edits : List<Edit>
            - fitnessScore : double
            - compileTime : long
            - unitTestScore : double
            - opacitorMeasurement1 : double
            - opacitorMeasurement2 : double
            - compiled : boolean
            + Patch()
            + Patch()
            + clone()
            + getSource()
            + getEdits()
            + getOutputSource()
            + getFitnessScore()
            + setFitnessScore()
            + getCompileTime()
            + setCompileTime()
            + getUnitTestScore()
            + setUnitTestScore()
            + getOpacitorMeasurement1()
            + setOpacitorMeasurement1()
            + getOpacitorMeasurement2()
            + setOpacitorMeasurement2()
            + isCompiled()
            + setCompiled()
            + toString()
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.patch {
        interface PatchFactory {
            {abstract} + getPatchForSourceWithEdits()
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.patch {
        class SimplePatchFactory {
            - randomNumberGenerator : Supplier<Double>
            + SimplePatchFactory()
            + getPatchForSourceWithEdits()
        }
      }
    }
  }
  

  Neighbour -up-|> Patch
  Neighbour o-- Patch : parent
  Offspring -up-|> Patch
  Offspring o-- Source : source
  Patch o-- Source : source
  Patch o-- Source : outputSource
  SimplePatchFactory -up-|> PatchFactory
  SimplePatchFactory o-- RandomEditFactory : editFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
